--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
